objects/Exemption__c.object
<CustomObject>
    <fields>
        <fullName>Exemption__c</fullName>
        <label>Exemption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MD_Part_Family__c</fullName>
        <label>MD Part Family</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Exemptions</relationshipLabel>
        <relationshipName>Exemptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MDD Exemption</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Exemption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDD Exemptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>